# pinyin-cpp

./: .gitignore  CMakeLists.txt  chars.csv  chars.csv.cpp  cppres.py  extract.py  gbk-inv.bin.cpp  gbk.bin.cpp  gbk.bin.py  gbk.hpp  pinyin.cpp  pinyin.hpp  test_candidate.cpp  utf8.hpp
include/: pinyin.hpp  pinyin_englify.hpp  pinyin_input.hpp  pinyin_match.hpp  pinyin_server.hpp  pinyin_words.hpp  trie.hpp  utf8.hpp
include/pinyincpp/: bytes_reader.hpp  counting_iterator.hpp  ctype.hpp  debug.hpp  gbk.hpp  inline_vector.hpp  pinyin.hpp  pinyin_chars.hpp  pinyin_englify.hpp  pinyin_input.hpp  pinyin_match.hpp  pinyin_server.hpp  pinyin_words.hpp  small_map.hpp  sort_top_n.hpp  trie.hpp
scripts/: check_source_utf8.py  extract_sample_text.py  sample_text_files.txt
scripts/data_generate/: chars.csv.py  gbk-inv.bin.py  gbk.bin.py  pinyin.bin.py  pinyintools.py  words.csv.py
src/: pinyin.cpp
tests/: server.cpp  test_enggy.cpp  test_input.cpp  test_match.cpp
